Modificando o código da imagem "Lupa"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 
 					<div class="imagemResultado"
-					<h2><img src="lupa.png" class=lupa></h2>
+					<h2><img src="Lupa.png" class=lupa></h2>
 					<p class="texto"> Nenhuma mensagem encontrada!!</p>
 					</div>
 
